<resources>
    <string name="app_name">VMS App</string>
    <string name="toddlers_n_1_year_5_years"><![CDATA[Toddlers\n< 1 Year - > 5 Years]]></string>
    <string name="teen_age_n_5_years_18_years"><![CDATA[Teen Age\n< 5 Years - > 18 Years]]></string>
    <string name="adults_n_18_years_35_years"><![CDATA[Adults\n< 18 Years - > 35 Years]]></string>
    <string name="mature_n_35_years_55_years"><![CDATA[Mature\n< 35 Years - > 55 Years]]></string>
    <string name="old_person_n_55_years"><![CDATA[Old Person\n>= 55 Years]]></string>
    <string name="new_born_n1_day_1_year"><![CDATA[New Born\n1 Day - > 1 Year]]></string>
    <string name="add_family_member">Add Family Member</string>
    <string name="name">Name</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="add">Add</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_family_member_tree">Family Member Tree</string>
    <string name="menu_add_family_member">Add Family Member</string>
    <string name="menu_article">Article</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_vaccination">Vaccinations</string>
    <string name="menu_logout">Logout</string>

    <string name="camera">Camera</string>
    <string name="choose_option">Choose Option</string>
    <string name="gallery">Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="live_consultation">Live Consultation</string>
    <string name="inject">Inject</string>
    <string name="upload_slip">Upload Slip</string>
    <string name="nearby_hospitals">Nearby Hospitals</string>
    <string name="google_maps_key">AIzaSyB9sfmrQqtjiWwSd2EZQBZAtd5oU19sDlM</string>
    <string name="find_nearby_hospitals">Find Nearby Hospitals</string>
    <string name="upcoming_vaccinations">Upcoming Vaccinations</string>
    <string name="menu_history">History</string>
    <string name="search">Search</string>
    <string name="create_pdf">Create PDF</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_upcoming_vaccination" >Upcoming Vaccinations</string>
    <string name="vaccination_schedule">Vaccination Schedule</string>

</resources>