<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fyp.vmsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_family_member_tree"
        android:name="com.fyp.vmsapp.ui.family_member.FamilyMemberTreeFragment"
        android:label="@string/menu_family_member_tree"
        tools:layout="@layout/fragment_family_member_tree" />

    <fragment
        android:id="@+id/nav_add_family_member"
        android:name="com.fyp.vmsapp.ui.family_member.AddFamilyMemberFragment"
        android:label="@string/menu_add_family_member"
        tools:layout="@layout/fragment_add_family_member" />

    <fragment
        android:id="@+id/nav_article"
        android:name="com.fyp.vmsapp.ui.article.ArticleFragment"
        android:label="@string/menu_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/nav_article_details"
        android:name="com.fyp.vmsapp.ui.article.ArticleDetailFragment"
        android:label="@string/menu_article"
        tools:layout="@layout/fragment_article_detail" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fyp.vmsapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_vaccination"
        android:name="com.fyp.vmsapp.ui.vaccination.VaccinationFragment"
        android:label="@string/menu_vaccination"
        tools:layout="@layout/fragment_vaccination" />

    <fragment
        android:id="@+id/nav_nearby_hospitals"
        android:name="com.fyp.vmsapp.ui.nearby_hospitals.NearbyHospitalsFragment"
        android:label="@string/nearby_hospitals"
        tools:layout="@layout/fragment_nearby_hospitals" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.fyp.vmsapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.fyp.vmsapp.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_upcoming_vaccination"
        android:name="com.fyp.vmsapp.ui.upcoming_vaccination.UpcomingVaccinationFragment"
        android:label="@string/menu_upcoming_vaccination"
        tools:layout="@layout/fragment_upcoming_vaccination" />
</navigation>