<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".AddFamilyMemberActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_add_photo"
                android:onClick="onClick"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/et_family_member_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="textCapWords"
                android:imeOptions="actionDone"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:drawableLeftCompat="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:gravity="center|start"
                android:hint="@string/select_date_of_birth"
                android:layout_marginTop="10dp"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/spn_blood_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/spn_age_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:spinnerMode="dialog"/>

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>