<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_upcoming_vaccinations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_gray"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_vaccine"
                        android:padding="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/app_name"
                        android:layout_alignParentTop="true"
                        android:layout_above="@id/text1" />

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:text="@string/upcoming_vaccinations"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:background="@drawable/et_border_gray"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_family_member_tree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_gray"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_family_member_tree"
                        android:padding="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/app_name"
                        android:layout_alignParentTop="true"
                        android:layout_above="@id/text2"/>

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:text="@string/menu_family_member_tree"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:background="@drawable/et_border_gray"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_articles"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_gray"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_article"
                        android:padding="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/app_name"
                        android:layout_alignParentTop="true"
                        android:layout_above="@id/text3"/>

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:text="@string/menu_article"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:background="@drawable/et_border_gray"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_gray"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_history"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:padding="20dp"
                        android:contentDescription="@string/app_name"
                        android:layout_alignParentTop="true"
                        android:layout_above="@id/text4"/>

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:text="@string/menu_history"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:background="@drawable/et_border_gray"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>